--- a/index.html
+++ b/index.html
@@ -2028,7 +2028,7 @@
     
 
     <div class="mb-3">
-      <form name="contact" method="POST" action="https://formspree.io/test@example.org">
+      <form name="contact" method="POST" data-netlify="true">
         <div class="form-group form-inline">
           <label class="sr-only" for="inputName">Name</label>
           <input type="text" name="name" class="form-control rounded-0 w-100" id="inputName"
