--- a/index.html
+++ b/index.html
@@ -517,8 +517,7 @@
 
 
 
-<div class="row" itemprop="author" itemscope itemtype="http://schema.org/Person"
-  itemref="person-email person-address">
+<div class="row" itemprop="author" itemscope="" itemtype="http://schema.org/Person" itemref="person-email person-address">
   <div class="col-lg-5">
     <div id="profile">
       
