--- a/blogs/getting-started/index.html
+++ b/blogs/getting-started/index.html
@@ -126,7 +126,7 @@
   
   <meta property="og:site_name" content="Samden Lepcha">
   <meta property="og:url" content="/blogs/getting-started/">
-  <meta property="og:title" content="Predicting Market Competitiveness for Medicare Insurance Products | Samden Lepcha">
+  <meta property="og:title" content="Winning Our First Data Science Hackathon | Samden Lepcha">
   <meta property="og:description" content="The Journey into winning our first data science hackathon."><meta property="og:image" content="/blogs/getting-started/featured.jpg">
   <meta property="twitter:image" content="/blogs/getting-started/featured.jpg"><meta property="og:locale" content="en-us">
   
@@ -170,7 +170,7 @@
 
 
 
-  <title>Predicting Market Competitiveness for Medicare Insurance Products | Samden Lepcha</title>
+  <title>Winning Our First Data Science Hackathon | Samden Lepcha</title>
 
 </head>
 
@@ -388,7 +388,7 @@
           class="article-header-caption">MLDS 2019</span>
     </div>
     <div class="col-lg-8">
-      <h1 itemprop="name">Predicting Market Competitiveness for Medicare Insurance Products</h1>
+      <h1 itemprop="name">Winning Our First Data Science Hackathon</h1>
 
       
       <p class="page-subtitle">The only impossible journey is the one you never begin - Tony Robbins</p>
@@ -473,11 +473,12 @@
 
     <div class="article-style" itemprop="articleBody">
       <h2 id="background">Background</h2>
-<p>This was around the third week of January 2019 and just at the right time where our New Year Resolution energy were still pretty much present. My roommate and me had taken part in several hackathons before this and we had never reached close to the finishing line in any one of them. After completing several courses in data science it was frustrating to not see any results during these competitions. It was then my roommate had found a hackathon in a newly developed Indian based competition or hackathon website known as Machine Hack. The title of this hackathon was <strong>&ldquo;Republic Day Hackathon by TEG Analytics And AIM&rdquo;</strong>.
+<p><strong>Note: This blog article only details the journey of taking part in a data science hackathon and does not contain the full technical details.</strong></p>
+<p>This was around the third week of January 2019 and just at the right time where our New Year Resolution energy were still pretty much present. My roommate and me had taken part in several hackathons before this and we had never reached close to the finishing line in any one of them. After completing several courses in data science it was frustrating to not see any results during these competitions. It was then my roommate had found a hackathon in a newly developed Indian based competition or hackathon website known as <strong>Machine Hack</strong>. The title of this hackathon was <strong>&ldquo;Republic Day Hackathon by TEG Analytics And AIM&rdquo;</strong>.
 <img src="gallery/hackathon1.JPG" alt="Hackathon Picture in Machine Hack">
-It was a fresh start, a new data science hackathon where we would try our best again and hopefully get somewhere closer than our previous attempts. The Grand Prize stated that the entire team will get an International Trip for 4 days and 5 nights to anywhere in South East Asia . The hackathon finale was scheduled for the 28th of January and we had one week to make something happen. There was a holiday right before the weekend and we intended to utilise every oppurtunity that we can get.</p>
+It was a fresh start, a new data science hackathon where we would try our best again and hopefully get somewhere closer than our previous attempts. The Grand Prize stated that the entire team will get an International Trip for 4 days and 5 nights to anywhere in South East Asia. Wow! we could already see the different places that we could visit if we could win (Already dreaming about the trip at this point). The hackathon finale was scheduled for the 28th of January and we had one week to make something happen. There was a holiday right before the weekend and we intended to utilise every oppurtunity that we can get.</p>
 <h2 id="continuing-on-">Continuing on &hellip;</h2>
-<p>Since the problem statement of the hackathon was to &ldquo;Predict Market Competitiveness&rdquo; or in layman&rsquo;s terms &ldquo;Predict the enrollments of each insurance plan&rdquo;&rdquo; we had to gain some domain knowledge for this. Therefore for the first two days we decided to scour the internet and understand what &ldquo;Medicare&rdquo; is and how it operates. We needed to understand what the beneficiaries needed or preferred and how the Medicare Advantage companies structure their plans. Some really good resources were :</p>
+<p>Since the problem statement of the hackathon was to <strong>&ldquo;Predicting Market Competitiveness for Medicare Insurance Products&rdquo;</strong> or in layman&rsquo;s terms &ldquo;Predict the enrollments of each insurance plan&rdquo; we had to gain some domain knowledge since we did not have any prior knowledge on this field. Therefore for the first two days we decided to scour the internet and understand what &ldquo;Medicare&rdquo; is and how it operates. We needed to understand what the beneficiaries needed or preferred and how the Medicare Advantage companies structure their plans. Some really good resources were :</p>
 <ul>
 <li>Q1 Medicare <a href="https://q1medicare.com/">Website</a></li>
 <li>Kaiser Family Foundation <a href="https://www.kff.org/">Website</a></li>
@@ -485,20 +486,20 @@ It was a fresh start, a new data science hackathon where we would try our best a
 <li>and Deft Research <a href="https://www.deftresearch.com/">Website</a></li>
 </ul>
 <p>After understanding some of the domain cost sharing terms such as &ldquo;Deductible&rdquo;, &ldquo;Copayment&rdquo;, &ldquo;Co-insurance&rdquo;, &ldquo;MOOP (Maximum Out of Pocket Cost)&rdquo; etc , we then decided to indulge in the datasets provided.</p>
-<p>The dataset was provided consisted of three levels of information:</p>
+<p>The dataset provided consisted of three levels of information:</p>
 <ol>
 <li>Plan Level Information</li>
 <li>Benefit Level Information</li>
 <li>Enrollment numbers at the State County Level</li>
 </ol>
-<p>We spent quite some time on the benefit level data but at that time due to college work (internal exams and assignments ughh) we could not decode this information and convert it into a form that we could have used. We instead spent our time on the plan level information also known as the Landscape file which contains Demographics(State and County), Monthly Consolidated Premium (Medicare Part C + Part D), Annual Deductible, Maximum Out of Pocket Costs and Unique Plan Identifiers known as bid id (Contract Number + Plan ID + Segment Id). The Image below showcases our entire workflow or approach for this hackathon.</p>
+<p>We spent quite some time on the benefit level data but at that time due to college work (internal exams and assignments ughh) we could not decode this information and convert it into a form that we could have used. We instead spent our remaining time on the plan level information also known as the Landscape file which contains Demographics(State and County), Monthly Consolidated Premium (Medicare Part C + Part D), Annual Deductible, Maximum Out of Pocket Costs and Unique Plan Identifiers known as bid id (Contract Number + Plan ID + Segment Id). The Image below showcases our entire workflow or approach for this hackathon.</p>
 <p><img src="gallery/methodology_resized.JPG" alt="Workflow Image"></p>
 <p>After perfroming all the usual data science processes such as EDA, Preprocessing it was the modelling (P.S. If you want more technical information and methodology you can visit my <a href="https://github.com/SamdenLepcha/Predict-Market-Competitiveness-For-Insurance-Products">Github repo</a>). It was obviously a regression problem where we were predicting a continuous variable i.e the number of enrollments. We first began with the thought process that we were gonna try a time series approach with GRU/LSTM models but that gave a pretty bad score in the leaderboard and with the lack of adequate time steps. We then switched over to tree based models and ensembling and as everyone knows from Kaggle XGboost is amazing!!!!. We used a stack approach of various models like Knn Regressor, Random Forest Regressor, GradientBoosting Regressor. AdaBoostRegressor and ExtraTrees Regressor. Intuition into the data compelled us to use stacked approach rather than plain ensembling of various models. In the end we ended up using a Stacked model and the implementation was performed using StackNet by kaz-Anova (I know once the highest Competitions Grandmaster in Kaggle). Check out his <a href="https://github.com/kaz-Anova/StackNet">amazing repository</a> and we used the Python Implementation by H20.ai found <a href="https://github.com/h2oai/pystacknet">here</a>.</p>
 <p>The new stacked model with the addition of the Lag variable that they provided on the last day of the hackathon enabled us to secure a Top 3 position on the Leaderboard.</p>
 <p><img src="gallery/Leaderboard.JPG" alt="Leaderboard of the hackathon"></p>
 <p>This meant that we had qualified for the final phase of the Hackathon which was gonna take place in Machine Learning Developers Summit 2019. We had cleared most of the hurdles but now it was time for the bigger stage. It was kind of nerve-racking to think now we had to present in front of hundreds of people. But nevertheless we put our best efforts into making a presentation for this event. It was a long cab ride to the event destination and all along the way we were practising our presenation lines. After making it to the event place and meeting the organising team and the competitors(1st and 2nd place teams) it was time for our presentation. We had lost some bit of confidence when we found out that the competitors were a team of professional data scientists while we were just a couple of data science enthusiasts at best. But we still decided to give it our all and then went on to present in front of the massive audience. We then sat for the competitors presentations as well and found out that they did not do anything that was extraordinary or in any way better than our approach. In fact their approach was very similar to ours as well.</p>
 <p>The results were to be announced at the final program of the event where they were awarding all the exceptional people in Data Science from various companies and universities. It was then with a little bit of suspense(cliché) that they announced the winners of the hackathon. You can already guess that the winners turned out be none other than my team &ldquo;Neuron&rdquo;. The image above the title is the team receiving the award from the CEO of TEG Analytics.</p>
-<p>You can find the code in my <a href="https://github.com/SamdenLepcha/Predict-Market-Competitiveness-For-Insurance-Products">Github</a> repository and the video our presentation on <a href="https://www.youtube.com/watch?v=odrELjHvnsY&amp;list=PL9Kc1zSa46OzbjNVPmRap4EUYx8tW2x5j&amp;index=40">Youtube</a>.</p>
+<p>You can find the code in my <a href="https://github.com/SamdenLepcha/Predict-Market-Competitiveness-For-Insurance-Products">Github</a> repository, the video of our presentation on <a href="https://www.youtube.com/watch?v=odrELjHvnsY&amp;list=PL9Kc1zSa46OzbjNVPmRap4EUYx8tW2x5j&amp;index=40">Youtube</a> and also an <a href="https://analyticsindiamag.com/how-these-data-science-enthusiasts-from-christ-university-solved-our-insurance-products-hackathon/">article</a> published by <strong>Analytics India Magazine</strong>.</p>
 <p>Ohh yeah not forgetting that the trip took me to Bali, Indonesia and yes it was AMAZINGGG!.</p>
 <p><img src="gallery/Bali.jpg" alt="Bali Image"></p>
 
