Fixed Forms, Google analytics and favicon

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
   
     
   
-  <meta name="description" content="Data Science Intern">
+  <meta name="description" content="Samden Lepcha">
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html">
@@ -128,7 +128,7 @@
   <meta property="og:site_name" content="Samden Lepcha">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Samden Lepcha">
-  <meta property="og:description" content="Data Science Intern"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Samden Lepcha"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
   
@@ -167,7 +167,7 @@
 
 
 
-
+<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
   <title>404 Page not found | Samden Lepcha</title>
 
@@ -472,6 +472,10 @@
     <script src="/js/academia.min.7276a6a3624de715a5c7f54c7c07696d.js"></script>
 
     
+
+
+
+
 
 
 
