--- a/courses/example.1/example3/index.html
+++ b/courses/example.1/example3/index.html
@@ -171,7 +171,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
 
 
 
-
+<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
   <title>Example Page 1 | Samden Lepcha</title>
 
@@ -636,6 +636,10 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
     <script src="/js/academia.min.7276a6a3624de715a5c7f54c7c07696d.js"></script>
 
     
+
+
+
+
 
 
 
