--- a/courses/example/index.html
+++ b/courses/example/index.html
@@ -170,7 +170,7 @@
 
 
 
-
+<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
   <title>Overview | Samden Lepcha</title>
 
@@ -657,6 +657,10 @@
     <script src="/js/academia.min.7276a6a3624de715a5c7f54c7c07696d.js"></script>
 
     
+
+
+
+
 
 
 
