--- a/project/deep-learning/index.html
+++ b/project/deep-learning/index.html
@@ -578,7 +578,7 @@
 ![Deprived Image](Deprived Image Uploaded.JPG)
 <img src="Result-D2.JPG" alt="Result Image">
 <img src="Result-D3.JPG" alt="Result Extra Image">
-<img src="Result-ND1.JPG" alt="Final Result Recommendation"></p>
+![Final Result Recommendation](Another Result -D1.JPG)</p>
 
     </div>
 
