--- a/project/deep-learning/index.html
+++ b/project/deep-learning/index.html
@@ -544,6 +544,7 @@
     <div class="article-style" itemprop="articleBody">
       <h2 id="background">Background</h2>
 <p>There has been a lot of research done on drowsiness detecton in vehicles but there hasn&rsquo;t been any project that could detect fatigue levels through photos in a environment outside vehicles. In this I want to talk about this project based on the <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3738045/">research</a> to detect fatigue levels of a person through a photograph. For this project the main facial cues used to detect fatigue levels are: Undereyes, Eyes, Mouth, Nose and Skin.</p>
+<p><img src="hypothesis.JPG" alt="hypothesis"></p>
 <p>The complexities of fatigue have drawn much attention from researchers across various disciplines. Short-term fatigue may cause safety issue while driving; thus, dynamic systems were designed to track driver fatigue. Longterm fatigue could lead to chronic syndromes, and eventually affect individuals physical and psychological health. Traditional methodologies of evaluating fatigue not only require sophisticated equipment but also consume enormous time.</p>
 <h2 id="proposal">Proposal</h2>
 <p>Therefore , in this project the attempt was to develop a novel and efﬁcient method to predict individual’s fatigue rate by scrutinising human facial cues. The goal was to predict fatigue rate based on a single photo. This work represents a promising way to assess sleep-deprived fatigue, and the project will provide a viable and efﬁcient computational framework for user fatigue modelling in large-scale.</p>
@@ -565,7 +566,9 @@
 <li>Medical image analysis and many more</li>
 </ul>
 <p><strong>OpenCV</strong> is a highly optimised library designed for real time applications. So what opencv does is that it converts the input image into numbers that can be understood using the &ldquo;imread&rdquo; function. So this image is fed and the necessary facial landmarks are cropped out. For detection of the face in general, eyes, nose , mouth we have used a pre-trained model readily available on the Internet. This can be done using OpenCV , dlib and Python. But for undereyes there was not any readily available model therefore for this facial landmark a custom-trained object detection model was used.</p>
-<p>But to train the model data was required therefore the faces were downloaded from online sources such as unspalsh and google images and the undereyes were marked onto them. This was performed using <a href="https://github.com/tzutalin/labelImg">LabelImg</a> which is an open source graphical image annotation tool. Then using the Tensorflow Object Detection API the new annotated data was used to train the model. The model used for training was inception-v2 with faster rcnn which are readily available for download in the tensorflow models repository. I have used this <a href="https://github.com/EdjeElectronics/TensorFlow-Object-Detection-API-Tutorial-Train-Multiple-Objects-Windows-10">tutorial</a> by Evan for performing this process. This tutorial explains all the underlying steps required to train your very own object detection model.</p>
+<p>But to train the model data was required therefore the faces were downloaded from online sources such as unspalsh and google images and the undereyes were marked onto them. This was performed using <a href="https://github.com/tzutalin/labelImg">LabelImg</a> which is an open source graphical image annotation tool.</p>
+<p><img src="LabelImg.JPG" alt="LabelImg"></p>
+<p>Then using the Tensorflow Object Detection API the new annotated data was used to train the model. The model used for training was inception-v2 with faster rcnn which are readily available for download in the tensorflow models repository. I have used this <a href="https://github.com/EdjeElectronics/TensorFlow-Object-Detection-API-Tutorial-Train-Multiple-Objects-Windows-10">tutorial</a> by Evan for performing this process. This tutorial explains all the underlying steps required to train your very own object detection model.</p>
 <p>Some of the Images that were used for training the models are as follows:</p>
 <p><img src="Images.JPG" alt="Images"></p>
 <h3 id="classificaton-phase">Classificaton Phase</h3>
@@ -578,7 +581,7 @@
 ![Deprived Image](Deprived Image Uploaded.JPG)
 <img src="Result-D2.JPG" alt="Result Image">
 <img src="Result-D3.JPG" alt="Result Extra Image">
-![Final Result Recommendation](Another Result -D1.JPG)</p>
+<img src="Recon.JPG" alt="Final Result Recommendation"></p>
 
     </div>
 
